@@ -4,6 +4,7 @@ Changelog for mysql-duplicate-key-checker:
    * Refactored into a runnable module and added tests.
    * Redundant indexes were only detected if the shorter index was first.
    * Redundant foreign keys sometimes weren't detected.
+   * All indexes on MEMORY tables were reported as HASH.
 
 2007-08-23: version 1.0.5
 
